- Activation/Verification of License - Services - Stores - MVVM

--- a/ECoopSystem.csproj
+++ b/ECoopSystem.csproj
@@ -18,15 +18,12 @@
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="10.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.Extensions" Version="10.0.2" />
   </ItemGroup>
 
   <ItemGroup>
 
 	<AvaloniaResource Include="Assets\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
-    <Folder Include="Stores\" />
   </ItemGroup>
 </Project>
