- Linux build and support

--- a/ECoopSystem.csproj
+++ b/ECoopSystem.csproj
@@ -1,10 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <!-- Conditional output type for cross-platform support -->
+    <OutputType Condition="'$(OS)' == 'Windows_NT'">WinExe</OutputType>
+    <OutputType Condition="'$(OS)' != 'Windows_NT'">Exe</OutputType>
+    
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <ApplicationManifest Condition="'$(OS)' == 'Windows_NT'">app.manifest</ApplicationManifest>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+    
+    <!-- Runtime identifiers for publishing -->
+    <RuntimeIdentifiers>win-x64;linux-x64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
@@ -47,6 +53,7 @@
   <ItemGroup>
     <Compile Remove="Build\BuildConfiguration.template.cs" />
     <None Include=".github\workflows\build-release.yml" />
+    <None Include=".github\workflows\linux-tests.yml" />
     <None Include="Build\BuildConfiguration.template.cs" />
   </ItemGroup>
 
