- background Re-Verification

--- a/appsettings.json
+++ b/appsettings.json
@@ -19,7 +19,8 @@
     "GracePeriodDays": 7,
     "MaxActivationAttempts": 3,
     "LockoutMinutes": 5,
-    "ActivationLookbackMinutes": 1
+    "ActivationLookbackMinutes": 1,
+    "BackgroundVerificationIntervalMinutes": 1
   },
   "Application": {
     "Name": "ECoopSystem",
