--- a/appsettings.json
+++ b/appsettings.json
@@ -1,18 +1,17 @@
 {
-  "ApiSettings": {
-    "BaseUrl": "https://e-coop-server-production.up.railway.app/",
-    "Timeout": 12,
-    "MaxRetries": 3,
-    "MaxResponseSizeBytes": 1048576
-  },
-  "WebViewSettings": {
-    "BaseUrl": "https://e-coop-client-production.up.railway.app/",
-    "TrustedDomains": [
-      "e-coop-client-development.up.railway.app",
-      "e-coop-client-production.up.railway.app",
-      "e-coop-suite.com",
-      "ecoopsuite.com"
-    ],
+"ApiSettings": {
+  "BaseUrl": "https://api.example.com/",
+  "Timeout": 12,
+  "MaxRetries": 3,
+  "MaxResponseSizeBytes": 1048576
+},
+"WebViewSettings": {
+  "BaseUrl": "https://app.example.com/",
+  "TrustedDomains": [
+    "dev-client.example.com",
+    "app.example.com",
+    "api.example.com"
+  ],
     "AllowHttp": false
   },
   "Security": {
