--- a/ECoopSystem.csproj
+++ b/ECoopSystem.csproj
@@ -41,6 +41,10 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="10.0.3" />
     <PackageReference Include="WebViewControl-Avalonia" Version="3.120.11" />
+    
+    <!-- Code protection packages -->
+    <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
+    <PackageReference Include="System.Security.Cryptography.Primitives" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -65,9 +69,11 @@
   <!-- Exclude template files from compilation -->
   <ItemGroup>
     <Compile Remove="Build\BuildConfiguration.template.cs" />
+    <Compile Include="LICENSE.md" />
     <None Include=".github\workflows\build-release.yml" />
     <None Include=".github\workflows\linux-tests.yml" />
     <None Include="Build\BuildConfiguration.template.cs" />
+    <None Include="confuser.crproj" />
   </ItemGroup>
 
   <ItemGroup>
