--- a/ECoopSystem.csproj
+++ b/ECoopSystem.csproj
@@ -69,11 +69,12 @@
   <!-- Exclude template files from compilation -->
   <ItemGroup>
     <Compile Remove="Build\BuildConfiguration.template.cs" />
-    <Compile Include="LICENSE.md" />
     <None Include=".github\workflows\build-release.yml" />
     <None Include=".github\workflows\linux-tests.yml" />
     <None Include="Build\BuildConfiguration.template.cs" />
     <None Include="confuser.crproj" />
+    <None Include="LICENSE.md" />
+    <None Include="README.md" />
   </ItemGroup>
 
   <ItemGroup>
