- new WebView package implementation fixed (Window) STAThread if windows flag removed

--- a/ECoopSystem.csproj
+++ b/ECoopSystem.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <!-- Conditional output type for cross-platform support -->
-    <OutputType Condition="'$(OS)' == 'Windows_NT'">WinExe</OutputType>
+    <OutputType Condition="'$(OS)' == 'Windows_NT'">Exe</OutputType>
     <OutputType Condition="'$(OS)' != 'Windows_NT'">Exe</OutputType>
     
     <TargetFramework>net9.0</TargetFramework>
